# Spell-it

./: .gitignore  CMakeLists.txt  README.md  app_logger.cpp  app_logger.h  app_paths.cpp  app_paths.h  audio_downloader.cpp  audio_downloader.h  countability_downloader.cpp  countability_downloader.h  countability_fetcher.py  database_manager.cpp  database_manager.h  deepseek_batch_countability.py  fetch_countability_oxford.py  gui_widgets.cpp  gui_widgets.h  gui_widgets_countability.cpp  gui_widgets_home_mapping.cpp  gui_widgets_internal.cpp  gui_widgets_internal.h  gui_widgets_spelling.cpp  gui_widgets_summary_stats_books.cpp  gui_widgets_window.cpp  main.cpp  normalize_audio.py  pdf_words_to_csv.py  pos_downloader.cpp  pos_downloader.h  reference.cpp  reference.jsx  test_db.cpp  test_hash.cpp
assets/audio/: .hash_manifest.json  .normalize_progress.json
data/: ieltscat_reading_20_to_5_manifest.json
default_books/: README.md
default_books/phrase_cluster/: 六级翻译词群.json
scripts/: distill_ieltscat_polysemy_from_json.py  distill_ieltscat_polysemy_redistill_auto.py  distill_translation_phrase_clusters.py  extract_translation_from_resources.py  fetch_ieltscat_all_readings.py  given_vocabulary_distiller.py  pdf_words_to_csv.py  polysemy_distiller.py  polysemy_redistill_core.py  qwen_batch_countability.py  reset_countability_pollution.py
tools/: countability_fetcher.py  distiller.py  polysemy_distiller.py
